<?xml version="1.0" encoding="utf-8"?>
<LinearLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.admin.firebase.SignupActivity"
    android:orientation="vertical"
    android:fitsSystemWindows="true"
    android:background="@drawable/login_bg"


    >
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_marginTop="60dp"
                android:layout_gravity="center"
                android:gravity="center"

                >
                <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_layout_name"
                    android:layout_width="wrap_content"
                    android:minWidth="300dp"
                    android:layout_height="wrap_content"
                    android:textColorHint="#ffffff"
                    android:layout_gravity="center_horizontal"

                    >

                    <EditText
                        android:id="@+id/input_name"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:singleLine="true"
                        android:hint="@string/hint_name"

                        />


                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_layout_email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:minWidth="300dp"
                    android:layout_gravity="center_horizontal"
                    android:textColorHint="#ffffff">

                    <EditText
                        android:id="@+id/input_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textEmailAddress"
                        android:hint="@string/hint_email"



                        />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_layout_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:minWidth="300dp"
                    android:layout_gravity="center_horizontal"
                    app:passwordToggleEnabled="true"
                    app:passwordToggleTint="@color/colorPrimary"
                    android:textColorHint="#ffffff"
                    >

                    <EditText
                        android:id="@+id/input_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword"
                        android:hint="@string/hint_password"
                        />
                </android.support.design.widget.TextInputLayout>

                <Button android:id="@+id/btn_signup"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_sign_up"
                    android:background="@color/colorPrimary"
                    android:layout_marginTop="40dp"
                    android:textColor="@android:color/white"
                    android:layout_gravity="center_horizontal"/>

                <TextView
                    android:id="@+id/text_signin"
                    android:layout_marginTop="10dp"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:text="@string/text_login"
                    android:textColor="#ffffff"
                    android:textSize="15dp"
                    android:layout_gravity="center_horizontal"
                    android:gravity="center_horizontal"/>

            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
