<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    tools:context="com.example.admin.firebase.SignInActivity"
    android:background="@drawable/login_bg"
    >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginTop="60dp"
                android:gravity="center"
                android:orientation="vertical">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_layout_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:minWidth="300dp"
                    android:textColorHint="#ffffff">


                    <EditText
                        android:id="@+id/input_name"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/hint_name"
                        android:singleLine="true"

                        />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_layout_email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="10dp"
                    android:minWidth="300dp"
                    android:textColorHint="#ffffff">

                    <EditText
                        android:id="@+id/input_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_email"
                        android:inputType="textEmailAddress"


                        />
                </android.support.design.widget.TextInputLayout>


                <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_layout_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="10dp"
                    android:minWidth="300dp"
                    android:textColorHint="#ffffff"
                    app:passwordToggleEnabled="true"
                    app:passwordToggleTint="@color/colorPrimary">

                    <EditText
                        android:id="@+id/input_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_password"
                        android:inputType="textPassword" />
                </android.support.design.widget.TextInputLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:minWidth="300dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/txtforgotpwd"
                        android:layout_width="300dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right"
                        android:layout_marginTop="10dp"
                        android:gravity="right"
                        android:text="@string/txt_forgot"
                        android:textColor="#ffffff"
                        android:textSize="15dp" />


                </LinearLayout>


                <Button
                    android:id="@+id/btn_signin"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="40dp"
                    android:background="@color/colorPrimary"
                    android:text="@string/btn_sign_in"
                    android:textColor="@android:color/white" />


                <TextView
                    android:id="@+id/text_register"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="10dp"
                    android:gravity="center_horizontal"
                    android:text="@string/text_register"
                    android:textColor="#ffffff"
                    android:textSize="15dp" />

                <TextView
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="10dp"
                    android:gravity="center_horizontal"
                    android:text="OR"
                    android:textColor="#ffffff"
                    android:textSize="15dp" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:minWidth="300dp"
                    android:background="@color/colorPrimary"
                    android:orientation="horizontal"
                    android:layout_marginTop="10dp">

                    <com.google.android.gms.common.SignInButton
                        android:id="@+id/googlebtn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        >

                    </com.google.android.gms.common.SignInButton>

                    <TextView
                        android:id="@+id/textgoogle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="SIGNIN WITH GOOGLE"
                        android:textColor="@android:color/white"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="5dp"
                        android:textSize="15dp" />



                </LinearLayout>


            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
